--- a/templates/login.html
+++ b/templates/login.html
@@ -4,8 +4,18 @@
 
 {% block content %}
 
-<div class="">
-    <h1>Login to TODOie</h1>
+<div class="flex flex-col items-center justify-center min-h-screen">
+    <h1 class="text-xl font-bold">Login to TODOie</h1>
+    <form hx-post="/login" class="card flex flex-col gap-4 mt-4 p-6 w-80 bg-card shadow" hx-target="#error"
+        hx-swap="innerHTML">
+        <div class="flex flex-col gap-2">
+            <label for="password" class="text-sm font-medium">Login</label>
+            <input type="password" name="login-key" placeholder="00000" id="password">
+        </div>
+        <button class="shadow">Login</button>
+        <div id="error" class="text-center text-xs text-red-600"></div>
+    </form>
 </div>
+
 
 {% endblock %}
