--- a/templates/partials/todo_item.html
+++ b/templates/partials/todo_item.html
@@ -7,9 +7,9 @@
     <div class="cursor-move w-4 h-6 flex flex-col justify-center items-center text-gray-400"
          draggable="true"
          ondragstart="handleDragStart(event)">
-        <span class="block w-3 h-[2px] bg-gray-400 mb-[2px]"></span>
-        <span class="block w-3 h-[2px] bg-gray-400 mb-[2px]"></span>
-        <span class="block w-3 h-[2px] bg-gray-400"></span>
+        <span class="block w-3 h-0.2px bg-gray-400 mb-0.5"></span>
+        <span class="block w-3 h-0.5 bg-gray-400 mb-0.5"></span>
+        <span class="block w-3 h-0.5 bg-gray-400"></span>
     </div>
 
     <!-- Todo content -->
