add alpine js, complete

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
     <title>{% block title %}{% endblock %} | TODOie</title>
     <link rel="stylesheet" href="css/dist.css">
     <script defer src="js/htmx.js"></script>
+    <script defer src="js/alpine.js"></script>
+
     {% block script %}{% endblock %}
 
 </head>
