--- a/templates/partials/nav_bar.html
+++ b/templates/partials/nav_bar.html
@@ -23,6 +23,13 @@
   });
 
   const todoLink = document.getElementById('todo');
-  const today_date = new Date().toISOString().split('T')[0];
+  const today = new Date();
+
+  const day = String(today.getDate()).padStart(2, '0');
+  const month = String(today.getMonth() + 1).padStart(2, '0');
+  const year = today.getFullYear();
+
+  const today_date = `${day}-${month}-${year}`;
+
   todoLink.href = `/todo?_t=${today_date}`;
 </script>
