auto updating progress bar

--- a/templates/partials/todo/progress_bar.html
+++ b/templates/partials/todo/progress_bar.html
@@ -1,5 +1,5 @@
 {% if percentage %}
-<div>
+<div id="progress-bar">
     <div class="w-full rounded-full h-1 flex text-sm select-none relative">
         {% if percentage.completed > 0 %}
         <div x-data="{ open: false }"
